Fixed bug where PDF/BibTex icons overlapped text on Mobile.

--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1105,6 +1105,10 @@ p.bibtex > a {
   text-decoration: none !important;
 }
 
+p.bibtex.bibtex-small {
+  font-size: 8px !important;
+}
+
 td.year {
   font-weight: bold;
   vertical-align: text-top;
